[package]
name = "rl"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
biquad = "0.5.0"
burn = { version = "0.20.0-pre.2", features = ["train", "autodiff", "dataset", "cuda", "ndarray"] }   
hound = "3.5.1"
macroquad = "0.4.14"
nalgebra = "0.34.1"
ndarray = "0.15.6"
num-complex = "0.4.6"
parry2d = "0.25.3"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
